[package]
name = "http-status-changer"
version = "0.1.0"
authors = ["Clément Renault <renault.cle@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.tide]
git = "https://github.com/rustasync/tide.git"
rev = "af0b900"
